--- a/week-5/exercise/index.css
+++ b/week-5/exercise/index.css
@@ -155,7 +155,7 @@
   right: 44px;
 
   opacity: 0;
-  animation: smoke 3s ease-in-out infinite;
+  animation: smoke 3s ease-out infinite;
 }
 
 .smoke-2 {
@@ -163,7 +163,7 @@
   right: 42px;
 
   opacity: 0;
-  animation: smoke 3s ease-in-out .7s infinite;
+  animation: smoke 3s ease-out 1s infinite;
 }
 
 .smoke-3 {
@@ -171,11 +171,11 @@
   right: 49px;
 
   opacity: 0;
-  animation: smoke 3s ease-in-out 1s infinite normal;
+  animation: smoke 3s ease-out .5s infinite normal;
 }
 
 @keyframes smoke {
-  0% {
+  0%, 10% {
     opacity: 0;
     transform: translateX(0) translateY(0) scale(1);
     box-shadow: 0 0 1px 0 #fff;
@@ -208,6 +208,14 @@
   border-radius: 50%;
   background: #ffcf11;
   box-shadow: 0 0 100px #ffdf05;
+
+  animation: turn 30s linear infinite;
+}
+
+@keyframes turn {
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .sun-wrapper {
@@ -216,7 +224,18 @@
   width: 100%;
   height: 100%;
 
+
   transform-origin: bottom center;
+  animation: sun-turn 120s linear infinite;
+}
+
+@keyframes sun-turn {
+  0% {
+    transform: rotate(-80deg);
+  }
+  100% {
+    transform: rotate(.8turn);
+  }
 }
 
 .sun div {
@@ -306,19 +325,65 @@
 
 .cloud-1 {
   top: 10px;
+
+  animation: cloud-1 40s linear infinite;
+}
+
+@keyframes cloud-1 {
+  0% {
+    transform: scaleX(-1) scale(.4) translateX(-10px);
+  }
+  100% {
+    transform: scaleX(-1) scale(.4) translateX(-1600px);
+  }
 }
 
 .cloud-2 {
   top: 50px;
+
+  animation: cloud-2 27s linear infinite;
+}
+
+@keyframes cloud-2 {
+  0% {
+    transform: scale(.6) translateX(10px);
+  }
+  100% {
+    transform: scale(.6) translateX(1100px);
+  }
 }
 
 .cloud-3 {
   top: 100px;
+
+  animation: cloud-3 21s linear 2s infinite;
+}
+
+@keyframes cloud-3 {
+  0% {
+    transform: scale(.8) translateX(-10px);
+  }
+  100% {
+    transform: scale(.8) translateX(850px);
+  }
 }
 
 .cloud-4 {
   top: 170px;
+
+  animation: cloud-4 15s linear infinite;
 }
+
+@keyframes cloud-4 {
+  0% {
+    transform: scaleX(-1) translateX(50px);
+  }
+  100% {
+    transform: scaleX(-1) translateX(-700px);
+  }
+}
+
+
 
 .sea {
   position: absolute;
