--- a/advanced-html-css/myandex-murrrket/style.css
+++ b/advanced-html-css/myandex-murrrket/style.css
@@ -25,7 +25,7 @@ body {
 .header__link {
   color: rgba(104, 216, 100, .7);
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   transition: all .3s linear;
 }
 
@@ -34,16 +34,168 @@ body {
   border-bottom: 1px solid rgba(104, 216, 100, 1);
 }
 
+.content {
+  width: 90vw;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .article {
   max-width: 315px;
   display: inline-block;
+  vertical-align: top;
+  margin-right: 15px;
 }
 
-.article__desc {
-  width: 100%;
+.article:first-child {
+  width: 90%;
 }
 
 .article__img {
   width: 100%;
+  height: 315px;
+  transition: all .25s linear;
+}
+
+.article__img:hover {
+  opacity: .7;
+}
+
+.article__title-group {
+  text-align-last: left;
+}
+
+.article__title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0;
+}
+
+.article__link {
+  text-decoration: none;
+  transition: all .25s linear;
+  color: #4a90e2;
+}
+
+.article__subtitle {
+  margin-top: 9px;
+  color: #6ca6e7;
+}
+
+.article__link:hover {
+  color: #f00;
+}
+
+.article__price {
+  text-align-last: left;
+  font-size: 1.2rem;
+  color: #f00;
+}
+
+.article__desc {
+  width: 100%;
+  text-align: justify;
+}
+
+.helper {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  word-spacing: 317px;
+  padding-left: 330px;
+  visibility: hidden;
+  display: inline;
+  width: auto;
   height: auto;
+  background: none;
+}
+
+
+
+/* Rating */
+
+.rating {
+  margin: 0 0 1em 0;
+  padding: 0;
+  border: none;
+}
+
+/* Caption */
+
+.rating__caption {
+  font-size: 0;
+  margin-bottom: 0.5em;
+  padding: 0;
+}
+
+/* Group */
+
+.rating__group {
+  position: relative;
+  width: 10em;
+  height: 2em;
+  background-image: url(./images/off.svg);
+  background-size: 2em auto;
+  background-repeat: repeat-x;
+}
+
+.rating__group:focus-within {
+  outline: 0.2em solid #4a90e2;
+  outline-offset: 0.2em;
+}
+
+/* Star */
+
+.rating__star {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  height: 2em;
+  font-size: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-size: 2em auto;
+  background-repeat: repeat-x;
+}
+
+.rating__star:focus {
+  outline: none;
+}
+
+.rating__star:hover,
+.rating__star:checked {
+  background-image: url(./images/on.svg);
+}
+
+.rating__star:hover~.rating__star {
+  background-image: url(./images/off.svg);
+}
+
+/* Options */
+
+.rating__star:nth-of-type(1) {
+  z-index: 5;
+  width: 2em;
+}
+
+.rating__star:nth-of-type(2) {
+  z-index: 4;
+  width: 4em;
+}
+
+.rating__star:nth-of-type(3) {
+  z-index: 3;
+  width: 6em;
+}
+
+.rating__star:nth-of-type(4) {
+  z-index: 2;
+  width: 8em;
+}
+
+.rating__star:nth-of-type(5) {
+  z-index: 1;
+  width: 10em;
 }
