--- a/advanced-html-css/myandex-murrrket/style.css
+++ b/advanced-html-css/myandex-murrrket/style.css
@@ -5,6 +5,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@media screen and (max-width: 768px) {
+::-webkit-scrollbar {
+  width: 0px;
+  background: rgba(255, 255, 255, 0.0);
+}
+}
 .header {
   text-align: center;
   background-color: rgba(75, 75, 75, 0.95);
