--- a/advanced-html-css/myandex-murrrket/style.css
+++ b/advanced-html-css/myandex-murrrket/style.css
@@ -6,11 +6,12 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-::-webkit-scrollbar {
-  width: 0px;
-  background: rgba(255, 255, 255, 0.0);
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: rgba(255, 255, 255, 0.0);
+  }
 }
-}
+
 .header {
   text-align: center;
   background-color: rgba(75, 75, 75, 0.95);
@@ -38,6 +39,42 @@ body {
 .header__link:hover {
   color: rgba(104, 216, 100, 1);
   border-bottom: 1px solid rgba(104, 216, 100, 1);
+}
+
+.switcher {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 10px;
+  text-align: right;
+  margin-right: 20px;
+}
+
+.switcher__list {
+  display: inline-block;
+  width: 50px;
+  height: 100%;
+}
+
+.switcher__list-link {
+  display: inline-block;
+  width: 50px;
+  height: 100%;
+  background: url(./images/list-solid.svg);
+}
+
+.switcher__tiles {
+  display: inline-block;
+  width: 50px;
+  height: 100%;
+  margin-left: 10px;
+  padding-right: 20px;
+}
+
+.switcher__tiles-link {
+  display: inline-block;
+  width: 50px;
+  height: 100%;
+  background: url(./images/th-large-solid.svg);
 }
 
 .content {
@@ -204,4 +241,40 @@ body {
 .rating__star:nth-of-type(5) {
   z-index: 1;
   width: 10em;
+}
+
+/* Footer */
+
+.footer {
+  min-height: 200px;
+  text-align: justify;
+  background-color: rgba(75, 75, 75, 0.95);
+  color: #fff;
+}
+
+.copyright__list {
+  width: 90vw;
+  margin: 0 auto;
+  text-align: center;
+
+}
+
+.copyright__item {
+  display: inline-block;
+  font-size: 1.5rem;
+  line-height: 5em;
+  margin-right: 20%;
+  padding-top: 5%;
+}
+
+.copyright__link {
+  display: inline-block;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: rgba(104, 216, 100, 1);
+  transition: all .25s linear;
+}
+
+.copyright__link:hover {
+  color: rgba(104, 216, 100, .7);
 }
