--- a/advanced-html-css/myandex-murrrket/style.css
+++ b/advanced-html-css/myandex-murrrket/style.css
@@ -12,6 +12,8 @@ body {
   }
 }
 
+/* Header */
+
 .header {
   text-align: center;
   background-color: rgba(75, 75, 75, 0.95);
@@ -40,6 +42,8 @@ body {
   color: rgba(104, 216, 100, 1);
   border-bottom: 1px solid rgba(104, 216, 100, 1);
 }
+
+/* Switcher */
 
 .switcher {
   width: 100%;
@@ -76,6 +80,8 @@ body {
   height: 100%;
   background: url(./images/th-large-solid.svg);
 }
+
+/* Main content */
 
 .content {
   width: 90vw;
@@ -163,15 +169,11 @@ body {
   border: none;
 }
 
-/* Caption */
-
 .rating__caption {
   font-size: 0;
   margin-bottom: 0.5em;
   padding: 0;
 }
-
-/* Group */
 
 .rating__group {
   position: relative;
@@ -186,8 +188,6 @@ body {
   outline: 0.2em solid #4a90e2;
   outline-offset: 0.2em;
 }
-
-/* Star */
 
 .rating__star {
   position: absolute;
@@ -215,8 +215,6 @@ body {
 .rating__star:hover~.rating__star {
   background-image: url(./images/off.svg);
 }
-
-/* Options */
 
 .rating__star:nth-of-type(1) {
   z-index: 5;
@@ -263,7 +261,7 @@ body {
   display: inline-block;
   font-size: 1.5rem;
   line-height: 5em;
-  margin-right: 20%;
+  margin-right: 15%;
   padding-top: 5%;
 }
 
@@ -277,4 +275,110 @@ body {
 
 .copyright__link:hover {
   color: rgba(104, 216, 100, .7);
+}
+
+/* Content List */
+
+.content-list {
+  list-style-type: none;
+}
+
+.content__item {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.content__img {
+  display: inline-block;
+  width: 24%;
+  height: auto;
+  vertical-align: top;
+  margin-right: 40px;
+}
+
+.content__title-group {
+  display: inline-block;
+  width: 24%;
+  vertical-align: top;
+  margin-right: 50px;
+  text-align-last: left;
+}
+
+.content__title {
+  margin: 0;
+}
+
+.content__desc {
+  display: inline-block;
+  width: 40%;
+  vertical-align: top;
+  margin-top: 0;
+  text-align: justify;
+  font-size: 1.3rem;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 960px) {
+
+  .content__desc {
+    font-size: 1.1rem;
+  }
+
+}
+
+@media screen and (min-width: 569px) and (max-width: 959px) {
+
+  .content__item::after {
+    content: "";
+    display: inline-block;
+    width: 150px;
+    border: 2px solid rgba(104, 216, 100, 1);
+    text-align: center;
+  }
+
+  .content__img {
+    width: 40%;
+    margin-bottom: 30px;
+  }
+
+  .content__title-group {
+    width: 40%;
+
+  }
+
+  .content__desc {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 568px) {
+
+  .content-list {
+    padding-left: 10px;
+  }
+
+  .content__item::after {
+    content: "";
+    display: inline-block;
+    width: 150px;
+    border: 2px solid rgba(104, 216, 100, 1);
+    text-align: center;
+  }
+
+  .content__img {
+    width: 90%;
+    margin-bottom: 30px;
+  }
+
+  .content__title-group {
+    width: 90%;
+
+  }
+
+  .content__desc {
+    width: 100%;
+    font-size: 1rem;
+  }
+
 }
