--- a/advanced-html-css/week-3/grandmas-kittens/style.css
+++ b/advanced-html-css/week-3/grandmas-kittens/style.css
@@ -21,7 +21,28 @@ body {
 /* Content styles */
 .content {
   display: flex;
-  min-height: calc(100vh - 213px);
+.menu {
+  width: 200px;
+  background-color: #d9d9d9;
+}
+
+.menu__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.menu__item {
+  padding: 25px 10px;
+  border-bottom: 1px solid #fff;
+  box-shadow: 0 1px 0 #8d8a8a;
+  cursor: pointer;
+}
+
+.menu__item:hover,
+.menu__item:focus {
+  background-color: #5a5a5a;
+  color: #fff;
 }
 
 /* Footer styles */
