--- a/advanced-html-css/week-3/grandmas-kittens/style.css
+++ b/advanced-html-css/week-3/grandmas-kittens/style.css
@@ -20,7 +20,13 @@ body {
 
 /* Content styles */
 .content {
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
+  min-height: calc(100vh - 263px);
+  margin-bottom: 50px;
+}
+
 .menu {
   width: 200px;
   background-color: #d9d9d9;
