--- a/advanced-html-css/week-3/grandmas-kittens/style.css
+++ b/advanced-html-css/week-3/grandmas-kittens/style.css
@@ -30,7 +30,7 @@ body {
 
 /* Menu styles */
 .menu {
-  width: 150px;
+  width: 180px;
   background-color: #d9d9d9;
 }
 
@@ -38,6 +38,8 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu__item {
@@ -108,7 +110,7 @@ body {
 
 /* Rating styles */
 .rating {
-  width: 150px;
+  width: 180px;
   background-color: #d9d9d9;
   margin-left: auto;
   padding: 0 10px;
