--- a/advanced-html-css/week-3/grandmas-kittens/style.css
+++ b/advanced-html-css/week-3/grandmas-kittens/style.css
@@ -112,8 +112,6 @@ body {
 .rating {
   width: 180px;
   background-color: #d9d9d9;
-  margin-left: auto;
-  padding: 0 10px;
   align-self: flex-start;
 }
 
@@ -130,20 +128,29 @@ body {
 .rating__label {
   display: inline-block;
   font-size: 0.7rem;
-  margin-left: 50px;
+  margin-left: 78px;
   margin-bottom: 10px;
 }
 
 .rating__input {
-  width: 10px;
-  height: 10px;
-  margin-right: 10px;
-  padding-right: 10px;
+      appearance: none;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    border: .5px solid gray;
+    vertical-align: top;
+    background-color: #ececec;
+}
+
+.rating__input:checked {
+  background: url(./images/checked.svg) no-repeat top 50% left 50% #a8e3fa;
+  border: none;
 }
 
 .rating__wrapper {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
 .rating__item {
@@ -176,7 +183,7 @@ body {
 
 meter {
   display: block;
-  width: 125px;
+  width: 140px;
   height: 15px;
   -webkit-appearance: none;
   border: 1px solid #ccc;
@@ -184,20 +191,20 @@ meter {
 }
 
 #one {
-  width: calc(125px - 10%);
+  width: calc(140px - 10%);
 }
 
 #two {
-  width: calc(125px - 20%);
+  width: calc(140px - 20%);
   background: linear-gradient(90deg, #fff715, #fffa68, #fdfffe, #fff);
 }
 
 #three {
-  width: calc(125px - 0%);
+  width: calc(140px - 0%);
 }
 
 #four {
-  width: calc(125px - 60%);
+  width: calc(140px - 50%);
   background: linear-gradient(90deg, #ec3430, #fdfffe);
 }
 
